// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | LinkBuy LinkBuy 1`] = `
.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c2 {
  display: inline-block;
  padding: 0;
  color: #0046FF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 {
  color: #0046FF;
  padding: 4px;
}

.c1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFFFFF;
  background-color: #0046FF;
}

@media (min-width:360px) {
  .c0 {
    font-size: 16px;
    line-height: 1.5;
  }
}

<span
  className="c0"
>
  <a
    className="c1 c2"
    href="/somewhere"
    onClick={[Function]}
  >
    Buy
  </a>
</span>
`;

exports[`Storyshots Molecules | LinkBuy LinkBuy disabled 1`] = `
.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c1 {
  color: #A0A09B;
  padding: 4px;
}

.c1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (min-width:360px) {
  .c0 {
    font-size: 16px;
    line-height: 1.5;
  }
}

<span
  className="c0"
>
  <span
    className="c1"
    disabled={true}
  >
    Buy
  </span>
</span>
`;

exports[`Storyshots Molecules | LinkBuy LinkBuy with rel as nofollow 1`] = `
.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c2 {
  display: inline-block;
  padding: 0;
  color: #0046FF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 {
  color: #0046FF;
  padding: 4px;
}

.c1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFFFFF;
  background-color: #0046FF;
}

@media (min-width:360px) {
  .c0 {
    font-size: 16px;
    line-height: 1.5;
  }
}

<span
  className="c0"
>
  <a
    className="c1 c2"
    href="/somewhere"
    onClick={[Function]}
    rel="nofollow"
  >
    Buy
  </a>
</span>
`;
